; ModuleID = '/home/carl/AnghaBench/git/extr_quote.c_quote_path_relative.c'
source_filename = "/home/carl/AnghaBench/git/extr_quote.c_quote_path_relative.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i8* }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @quote_path_relative(i8* %0, i8* %1, %struct.strbuf* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.strbuf*, align 8
  %7 = alloca %struct.strbuf, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.strbuf* %2, %struct.strbuf** %6, align 8
  %9 = bitcast %struct.strbuf* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %9, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %10 = load i8*, i8** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i8* @relative_path(i8* %10, i8* %11, %struct.strbuf* %7)
  store i8* %12, i8** %8, align 8
  %13 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %14 = call i32 @strbuf_reset(%struct.strbuf* %13)
  %15 = load i8*, i8** %8, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @strlen(i8* %16)
  %18 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %19 = call i32 @quote_c_style_counted(i8* %15, i32 %17, %struct.strbuf* %18, i32* null, i32 0)
  %20 = call i32 @strbuf_release(%struct.strbuf* %7)
  %21 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %22 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %21, i32 0, i32 0
  %23 = load i8*, i8** %22, align 8
  ret i8* %23
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @relative_path(i8*, i8*, %struct.strbuf*) #2

declare dso_local i32 @strbuf_reset(%struct.strbuf*) #2

declare dso_local i32 @quote_c_style_counted(i8*, i32, %struct.strbuf*, i32*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
